# sandbox-sdk

./: .gitignore  Makefile  README.md  orchestrator.proto  pyproject.toml
sandbox_sdk/: __init__.py  constants.py
sandbox_sdk/api/: __init__.py  orchestrator_pb2.py  orchestrator_pb2.pyi  orchestrator_pb2_grpc.py
sandbox_sdk/code_interpreter/: __init__.py  main.py  messaging.py  models.py
sandbox_sdk/sandbox/: code_snippet.py  filesystem.py  filesystem_watcher.py  main.py  process.py  sandbox_connection.py  sandbox_rpc.py  simple_process.py  terminal.py  websocket_client.py
tests/: test_cwd.py  test_env_vars.py  test_file_upload_download.py  test_filesystem.py  test_kill_sandbox.py  test_list_sandboxes.py  test_process.py  utils.py
tests/code_interpreter/: test_bash.py  test_basic.py  test_statefulness.py
