[tool.poetry]
name = "sandbox-sdk"
version = "0.1.0"
description = ""
authors = ["huang-jl <1046678590@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.3"
requests = "^2.32.3"
protobuf = "^5.27.1"
websockets = "^12.0"
jsonrpcclient = "^4.0.3"
grpcio-tools = "^1.64.1"
aiohttp = "^3.9.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-env = "^1.1.3"

[tool.poetry.group.autogen]
optional = true

[tool.poetry.group.autogen.dependencies]
autogen-agentchat = {path="../autogen", develop = true, python = "<3.13"}


[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest_env]
SANDBOX_BACKEND_ADDR = {value = "192.168.47.247", skip_if_set = true}
SANDBOX_PROXY_PORT = {value = "6666", skip_if_set = true}

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
